--- a/index.html
+++ b/index.html
@@ -143,11 +143,12 @@
   </p>
 
   <!-- Illustrative Image -->
-  <div class="mt-6">
-    <img src="1.png" alt="Example search with Douglas B Clendaniel's data"
-      class="rounded-lg border border-blue-900 shadow-lg mx-auto max-w-xl">
-    <p class="text-center text-sm text-gray-400 mt-2">Visual example of the completed form.</p>
-  </div>
+<div class="mt-6 px-4 sm:px-0">
+  <img src="1.png" alt="Example search with Douglas B Clendaniel's data"
+    class="rounded-lg border border-blue-900 shadow-lg mx-auto w-full max-w-xl h-auto">
+  <p class="text-center text-sm text-gray-400 mt-2">Visual example of the completed form.</p>
+</div>
+
 </div>
 
 
@@ -165,11 +166,12 @@
   <span class="tag selected">voilanorbert.com</span>
   <span class="tag selected">rocketreach.co</span>
 </div>
-<div class="mt-6">
+<div class="mt-6 px-4 sm:px-0">
   <img src="2.png" alt="Example search with Douglas B Clendaniel's data"
-    class="rounded-lg border border-blue-900 shadow-lg mx-auto max-w-xl">
+    class="rounded-lg border border-blue-900 shadow-lg mx-auto w-full max-w-xl h-auto">
   <p class="text-center text-sm text-gray-400 mt-2">Visual example of the completed form.</p>
 </div>
+
 
       <!-- 4. Cómo usar -->
 <!-- 4. Cómo usar -->
@@ -197,11 +199,12 @@
       </pre>
     </li>
   </ol>
-  <div class="mt-6">
-    <img src="3.png" alt="Example search with Douglas B Clendaniel's data"
-      class="rounded-lg border border-blue-900 shadow-lg mx-auto max-w-xl">
-    <p class="text-center text-sm text-gray-400 mt-2">Visual example of the completed form.</p>
-  </div>
+<div class="mt-6 px-4 sm:px-0">
+  <img src="3.png" alt="Example search with Douglas B Clendaniel's data"
+    class="rounded-lg border border-blue-900 shadow-lg mx-auto w-full max-w-xl h-auto">
+  <p class="text-center text-sm text-gray-400 mt-2">Visual example of the completed form.</p>
+</div>
+
 </div>
 
 
