--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     
         <!-- Menú móvil desplegable -->
         <div id="mobile-menu" class="hidden lg:hidden flex-col space-y-3 pb-4 animate-slide-down">
-          <a href="/" class="block text-white hover:text-blue-400 transition">Home</a>
-          <a href="/dashboard" class="block text-white hover:text-blue-400 transition">Dashboard</a>
+          <a href="http://157.230.235.125:5000/" class="block text-white hover:text-blue-400 transition">Home</a>
+          <a href="http://157.230.235.125:5000/dashboard" class="block text-white hover:text-blue-400 transition">Dashboard</a>
           <a href="#" class="block text-white hover:text-blue-400 transition">About</a>
         </div>
       </div>
@@ -96,7 +96,7 @@
 
 
 <main class="max-w-5xl mx-auto bg-[#1a1140] mt-10 p-8 rounded-2xl shadow-lg border border-blue-950">
-    <section class="max-w-5xl mx-auto px-4 py-10">
+    <section class="">
       <h1 class="text-4xl font-bold mb-6 text-blue-300">
         User Manual: Contact Research Tool
       </h1>
